# consumed-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
consumed_ai/: __init__.py  cli.py  daemon_lite.py  scanner.py  vault_local.py
consumed_ai/channels/: __init__.py
extension/: background.js  content.js  manifest.json  popup.html  popup.js
